--- a/experiments/default_detection.yaml
+++ b/experiments/default_detection.yaml
@@ -35,11 +35,11 @@ DATALOADER:
   SIZE_DIVISIBILITY: 32
   NUM_WORKERS: 0
 SOLVER:
-  IMS_PER_BATCH: 16
+  IMS_PER_BATCH: 8
   BASE_LR: 0.016
   WEIGHT_DECAY: 0.0001
-  STEPS: (30000, 40000)
-  MAX_ITER: 50000
+  STEPS: (2,5) #(30000, 40000)
+  MAX_ITER: 10 #50000
 TEST:
   IMS_PER_BATCH: 64
 PATHS_CATALOG: tools/paths_catalog.py
