--- a/experiments/default_physics.yaml
+++ b/experiments/default_physics.yaml
@@ -1,3 +1,3 @@
-ANNOTATION_FOLDER:
+ANNOTATION_FOLDER: /root/adept-model/data_sample/human_sample
 OBSERVATION_FOLDER: output/default_derender/inference/annotated_physics_human
 OUTPUT_FOLDER: output/default_physics
